# ml-for-trading

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: deploy-pages.yml
.streamlit/: config.toml  secrets.toml  secrets.toml.example
docs/: app.js  index.html  pipeline.md  styles.css
scratch/: find_df.py
scripts/: eda_preprocessing.py  export_static.py
src/: __init__.py  data_ingestion.py  orchestrator.py  train_benchmark.py
src/api/: main.py
src/models/: __init__.py  anomaly_detector.py  explainability.py  llm_explainer.py  mean_reversion.py  model_wrappers.py  portfolio_hrp.py  regime_hmm.py  risk_model.py  volatility_garch.py
src/training/: hyperparameter_tuner.py  progress.py
src/ui/: dashboard.py
tests/: verification.py
